update auth verrios 2